[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/bg.png" type="Texture" id=1]
[ext_resource path="res://data/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://startButton.gd" type="Script" id=3]
[ext_resource path="res://scoreLabel.gd" type="Script" id=4]
[ext_resource path="res://data/menu.ogg" type="AudioStream" id=5]
[ext_resource path="res://data/titleicon.png" type="Texture" id=6]
[ext_resource path="res://scenes/snow2d.png" type="Texture" id=7]
[ext_resource path="res://data/wind.ogg" type="AudioStream" id=8]

[node name="Node2D" type="Node2D"]

[node name="bg" type="Sprite" parent="."]
position = Vector2( 512.955, 305.144 )
scale = Vector2( 0.689844, 0.742178 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 389.825
margin_top = 320.849
margin_right = 622.825
margin_bottom = 445.849
custom_fonts/font = ExtResource( 2 )
text = "Play"
script = ExtResource( 3 )

[node name="Button4" type="Button" parent="."]
margin_left = 311.315
margin_top = 517.511
margin_right = 708.315
margin_bottom = 580.511
custom_fonts/font = ExtResource( 2 )
text = "Leaderboard"
script = ExtResource( 3 )

[node name="Button3" type="Button" parent="."]
margin_left = 26.1129
margin_top = 454.126
margin_right = 288.113
margin_bottom = 517.126
custom_fonts/font = ExtResource( 2 )
text = "Credits"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 724.597
margin_top = 451.174
margin_right = 986.597
margin_bottom = 514.174
custom_fonts/font = ExtResource( 2 )
text = "Settings"
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 634.804
margin_top = 194.293
margin_right = 1098.81
margin_bottom = 251.293
custom_fonts/font = ExtResource( 2 )
text = "0"
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Label"]
margin_left = -350.0
margin_top = -0.0374172
margin_right = -10.0
margin_bottom = 56.9626
custom_fonts/font = ExtResource( 2 )
text = "High Score :"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 542.357, 34.0154 )
stream = ExtResource( 5 )
autoplay = true
attenuation = 0.901251

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource( 8 )
autoplay = true

[node name="titleicon" type="Sprite" parent="."]
position = Vector2( 496.842, 77.7896 )
scale = Vector2( 0.668775, 0.58021 )
texture = ExtResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 499.599, -10.8312 )
scale = Vector2( 0.2, 0.2 )
amount = 500
lifetime = 34.78
preprocess = 11.52
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 2500, 1 )

[node name="TestLabel" type="Label" parent="."]
visible = false
margin_left = 1192.0
margin_top = 104.0
margin_right = 2078.0
margin_bottom = 268.0
text = "John 3:16 For God so loved the world that he gave his one and only Son, that whoever believes in him shall not perish but have eternal life."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Button4" to="Button4" method="_on_board_pressed"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_credits_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_settings_pressed"]
