[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/frost.png" type="Texture" id=1]
[ext_resource path="res://data/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://startButton.gd" type="Script" id=3]
[ext_resource path="res://scoreLabel.gd" type="Script" id=4]
[ext_resource path="res://data/wind.ogg" type="AudioStream" id=5]

[node name="Node2D" type="Node2D"]

[node name="frost" type="Sprite" parent="."]
position = Vector2( 500, 300 )
scale = Vector2( 1.17675, 1.11835 )
z_index = -1
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 10.7855
margin_top = 6.19775
margin_right = 182.785
margin_bottom = 69.1978
custom_fonts/font = ExtResource( 2 )
text = " Menu"
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 619.933
margin_top = 34.9544
margin_right = 929.933
margin_bottom = 91.9544
custom_fonts/font = ExtResource( 2 )
text = "0"
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="Label"]
margin_left = -410.312
margin_top = 119.063
margin_right = 109.688
margin_bottom = 196.064
custom_fonts/font = ExtResource( 2 )
text = "Reset High Score"
script = ExtResource( 3 )

[node name="LabelA" type="Label" parent="Label"]
margin_left = -340.228
margin_top = 1.0
margin_right = -0.228394
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "High Score :"

[node name="Label2" type="Label" parent="."]
margin_left = 48.217
margin_top = 309.22
margin_right = 933.217
margin_bottom = 606.22
custom_fonts/font = ExtResource( 2 )
text = "Created by wi-photos (c) 2020.
Source available on github at
https://github.com/
wi-photos/3D-Sledding"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="pressed" from="Button" to="Button" method="_on_backtomenu_pressed"]
[connection signal="pressed" from="Label/Button2" to="Label/Button2" method="_on_clearscore_pressed"]
